--- a/tm-frontend/package.json
+++ b/tm-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tourmanager",
+  "name": "tm-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
