Allowed both servers to run at the same time

--- a/tm-frontend/package.json
+++ b/tm-frontend/package.json
@@ -6,13 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "body-parser": "*",
+    "concurrently": "^5.2.0",
+    "express": "*",
+    "express-session": "*",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "request": "*",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "api": "concurrently --kill-others-on-fail \"(cd api && nodemon)\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
