--- a/tm-frontend/api/package.json
+++ b/tm-frontend/api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "body-parser": "*",
+    "cors": "^2.8.5",
     "express": "*",
     "express-session": "*",
     "request": "*"
