--- a/tm-frontend/package.json
+++ b/tm-frontend/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "api": "concurrently --kill-others-on-fail \"(cd api && nodemon)\" \"npm start\"",
+    "api": "concurrently --kill-others-on-fail \"(cd .. && cd tm-api && nodemon)\" \"npm start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
